# rust-syslog

./: .gitignore  Cargo.toml
examples/: connect_to_telegraf.rs  log.rs  rfc5424.rs  simplelog_integration.rs  write.rs
src/: facility.rs  format.rs  lib.rs  simplelog.rs
