[package]

name = "syslog"
version = "6.1.0"
authors = [ "contact@geoffroycouprie.com", "mikevinmike" ]
description = "Send log messages to syslog"
license = "MIT"
repository = "https://github.com/mikevinmike/rust-syslog"
documentation = "https://docs.rs/syslog"
keywords = ["syslog", "logs", "logging"]

[dependencies]
libc        = "^0.2"
time        = "^0.1"
log         = { version =  "^0.4", features = [ "std" ] }
error-chain = { version = "^0.12", default-features = false }
simplelog = "0.8.0"

[features]
nightly = []
backtrace = ["error-chain/backtrace"]
